early abstract component and interface development

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -90,6 +90,8 @@ libparser_a_SOURCES =				\
 	input.h					\
 	machine.c				\
 	machine.h				\
+	nesc-abstract.c				\
+	nesc-abstract.h				\
 	nesc-c.c				\
 	nesc-c.h				\
 	nesc-cg.c				\
