Make ncc work on .c files again (recent versions of gcc object to our -fnesc and -Wnesc options) by using an evil hack with -_:   - we replace all -fnesc -Wnesc by -_fnesc and -_Wnesc in ncc   - -_ is forwarded to nesc-compile (and hence nesc1) by tdspecs     It is (hopefully...) ignored by all other languages   - we ignore the _ in nesc_option (nesc-main.c) (Note that nesc1 and nesc-compile still accept -fnesc, etc directly)

--- a/tools/ncc.in
+++ b/tools/ncc.in
@@ -135,6 +135,10 @@ foreach $idir (@includes) {
 }
 
 print STDERR join(' ', @new_args), "\n" if $verbose;
+
+map { s/-((f|W|Wno-)nesc)/-_\1/; $_; } @new_args;
+#print STDERR "fun: ". join(" ", @actual_args) . "\n";
+
 exec @new_args;
 print STDERR "Couldn't execute nescc\n";
 exit 2;
