Add nesdoc, a simple frontend to ncc for doc generation Using truncate for target files was a bad idea. Use creat instead.

--- a/configure.in
+++ b/configure.in
@@ -73,6 +73,7 @@ AC_OUTPUT(
 	tools/ncg
 	tools/ncc
 	tools/nescc
+	tools/nesdoc
 	tools/set-mote-id
 	tools/avr-as/Makefile
 	tools/avr-as/make-avr-as
