--- a/tools/nescc.in
+++ b/tools/nescc.in
@@ -174,6 +174,11 @@ if ($mingw_gcc) {
     }
 }
 
+# Don't confuse the non-nesC frontends with our -f and -W flags
+# (these were ignored in earlier C/etc frontends, but current ones give
+# error messages, preventing nescc from compiling C files)
+map { s/-((f|W|Wno-)nesc)/-_\1/; $_; } @new_args;
+
 print STDERR join(' ', @new_args), "\n" if $verbose;
 exec @new_args;
 print STDERR "Couldn't execute $gcc\n";
