--- a/tools/avr-as/install-avr-as.in
+++ b/tools/avr-as/install-avr-as.in
@@ -23,7 +23,7 @@ $ncclibdir = $ARGV[0];
 open GCCV, "avr-gcc 2>&1 -v |";
 
 while (<GCCV>) {
-  $version = $1 if (/^gcc version ([0-9.]+)/);
+  $version = $1 if (/^gcc version (.+)/);
 }
 die "Could not determine avr-gcc version" if !defined($version);
 
