--- a/tools/mig.in
+++ b/tools/mig.in
@@ -85,6 +85,11 @@ if ($?) {
     exit 1;
 }
 
+if (!-f "$NCDIR/gen$target.pm") {
+    print STDERR "Unknown tool $target\n";
+    exit 2;
+}
+
 if ($ofile) {
     close STDOUT;
     if (!open STDOUT, ">$ofile") {
@@ -95,6 +100,7 @@ if ($ofile) {
 
 require "gen$target.pm";
 &gen($classname, @spec);
+$completed = 1;
 
 sub usage()
 {
@@ -177,3 +183,6 @@ sub arraybitsize()
     return @bitsize;
 }
 
+sub END() {
+    unlink $ofile unless !$ofile || $completed;
+}
