--- a/tools/ncc.in
+++ b/tools/ncc.in
@@ -72,7 +72,7 @@ for ($i = 0; $i <= $#ARGV; $i++) {
 }
 
 # Remove trailing / from TOSDIR, if any (it confuses the topdir stuff)
-chop $TOSDIR if $TOSDIR =~ m!/$!;
+chop $TOSDIR if $TOSDIR =~ m!./$!;
 
 if ($print_tosdir)
 {
