--- a/tools/avr-as/install-avr-as.in
+++ b/tools/avr-as/install-avr-as.in
@@ -28,5 +28,6 @@ while (<GCCV>) {
 die "Could not determine avr-gcc version" if !defined($version);
 
 die "Could not install AVR assembler" if
-  system("install -D as $ncclibdir/avr/$version/as");
+  system("mkdir -p $ncclibdir/avr/$version")
+  && system("install as $ncclibdir/avr/$version/as");
 
