--- a/tools/ncc.in
+++ b/tools/ncc.in
@@ -55,6 +55,10 @@ for ($i = 0; $i <= $#ARGV; $i++) {
 	    $print_tosdir = 1;
 	    $strip = 1;
 	}
+	elsif (/^-print-platforms$/) {
+	    $print_platforms = 1;
+	    $strip = 1;
+	}
 	elsif (/^-g$/) {
 	    $debugging = 1;
 	}
@@ -80,20 +84,31 @@ if ($print_tosdir)
     exit 0;
 }
 
+if ($print_platforms)
+{
+    print join(" ", all_platforms()), "\n";
+    exit 0;
+}
+
 $target = "mica" if !defined($target);
 
-$platform_def = "$TOSDIR/platform/$target/.platform";
+# First see if the directory for this platform was explicitly specified
+foreach $dir (@includes) {
+    if ($dir =~ m!/$target/?$! && -f "$dir/.platform") {
+	$platform_def = "$dir/.platform";
+	last;
+    }
+}
+
+$platform_def = "$TOSDIR/platform/$target/.platform" unless $platform_def;
 if (!-f $platform_def) {
     print STDERR "Unknown target $target\n";
-    print STDERR "Known targets for TinyOS directory $TOSDIR are:\n";
-    if (opendir PLATFORMS, "$TOSDIR/platform") {
-	foreach $d (readdir PLATFORMS) {
-	    push @platforms, $d if (-f "$TOSDIR/platform/$d/.platform");
-	}
-	closedir PLATFORMS;
-    }
+    print STDERR "Known targets for TinyOS directory $TOSDIR\n";
+    print STDERR "and the specified include directories are:\n";
+
+    @platforms = all_platforms();
     if (@platforms) {
-	print STDERR join(" ", @platforms);
+	print STDERR "  ", join(" ", @platforms);
     }
     else {
 	print STDERR "none.";
@@ -116,9 +131,26 @@ unshift @new_args, "-DPLATFORM_\U$target";
 unshift @new_args, "nescc";
 
 # Execute .sensor file in selected sensor board directories if it exists
-foreach $board (@boards) {
+$i = 0;
+BOARD: while ($i <= $#boards) {
+    $board = $boards[$i];
+
+    # First check include path for a .sensor file for this board
+    foreach $dir (@includes) {
+	if ($dir =~ m!/$board/?$! && -f "$dir/.sensor") {
+	    # Remove from @boards so that we don't add sensorboards/$board
+	    # to the search path
+	    splice @boards, $i, 1;
+	    do "$dir/.sensor";
+	    next BOARD;
+	}
+    }
+
+    # If none found, check the standard sensorboards directory
     $bspec = &idir_subst("%T/sensorboards/$board/.sensor");
     do $bspec if -f $bspec;
+
+    $i++;
 }
 
 if (!$nostdinc) {
@@ -176,3 +208,25 @@ sub fail {
     exit 2;
 }
 
+sub push_platform {
+    my ($p) = @_;
+
+    push @platforms, $p unless grep $_ eq $p, @platforms;
+}
+
+sub all_platforms() {
+    local(@platforms);
+
+    foreach $dir (@includes) {
+	push_platform($1) if -f "$dir/.platform" && $dir =~ m!/([^/]*)/?$!;
+    }
+
+    if (opendir PLATFORMS, "$TOSDIR/platform") {
+	foreach $d (readdir PLATFORMS) {
+	    push_platform($d) if (-f "$TOSDIR/platform/$d/.platform");
+	}
+	closedir PLATFORMS;
+    }
+
+    return @platforms;
+}
