--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -23,9 +23,10 @@ ncclibdir=$(libdir)/ncc
 
 bin_SCRIPTS = mig ncg ncc nescc set-mote-id
 
-ncclib_DATA = genjava.pm gencstjava.pm migdecode.pm
+ncclib_DATA = genjava.pm gencstjava.pm gencsharp.pm migdecode.pm
 
 EXTRA_DIST =					\
 	genjava.pm				\
 	gencstjava.pm				\
+	gencsharp.pm				\
 	migdecode.pm
