msp430 target from Vlado Handziski (handzisk@tkn.tu-berlin.de)

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -175,6 +175,7 @@ EXTRA_DIST = 					\
 	machine/self.c				\
 	machine/avr.c				\
 	machine/keil.c				\
+	machine/msp430.c			\
 	tdspecs					\
 	nesc-compile				\
 	COPYING					\
