--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -174,8 +174,9 @@ EXTRA_DIST = 					\
 	AST_walk_children.c			\
 	machine/self.c				\
 	machine/avr.c				\
-	machine/keil.c				\
+	machine/env_machine.c			\
 	machine/msp430.c			\
+	machine/keil.c				\
 	tdspecs					\
 	nesc-compile				\
 	COPYING					\
