Added missing $ for "momllib" variable.

--- a/tools/nescc.in
+++ b/tools/nescc.in
@@ -128,7 +128,7 @@ if( defined($docdir) ) {
     }
 }
 
-if (!momllib) {
+if (!$momllib) {
   unshift @new_args, "-specs=$NCDIR/tdspecs";
   unshift @new_args, $gcc;
   $ENV{NESC_GCC} = $gcc;
