Fixed -DNESC (nesc version number) bug.

--- a/tools/nescc.in
+++ b/tools/nescc.in
@@ -105,7 +105,10 @@ else {
     &fail("Internal error: invalid version $_");
 }
 $numversion = $v_a * 100 + $v_b * 10 + $v_c;
-push @new_args, "-DNESC=$numversion";
+# For GALSC
+push @new_args, "-DGALSC=$numversion";
+
+push @new_args, "-DNESC=111";
 
 #
 # documentation generation options
