Build even w/o avr-gcc (spammy message) Force correct path to nescc (support multiple nesC installations) -- Thanks to Elaine Cheong for both of these.

--- a/tools/avr-as/install-avr-as.in
+++ b/tools/avr-as/install-avr-as.in
@@ -23,7 +23,14 @@ $ncclibdir = $ARGV[0];
 open GCCV, "avr-gcc 2>&1 -v |";
 
 while (<GCCV>) {
-  $version = $1 if (/^gcc version ([^ \n]+)/);
+  $version = $1 if (/^gcc version ([0-9.]+)/);
+  $noavrgcc = 1 if /command not found/;
+}
+if ($noavrgcc) {
+    print "avr-gcc not found, not installing special avr-as\n";
+    print "(if you are using avr-based motes, you will need to\n";
+    print "reinstall nesC after installing avr-gcc)\n";
+    exit 0;
 }
 die "Could not determine avr-gcc version" if !defined($version);
 
