--- a/tools/nesdoc.in
+++ b/tools/nesdoc.in
@@ -18,6 +18,9 @@
 # the Free Software Foundation, 59 Temple Place - Suite 330,
 # Boston, MA 02111-1307, USA.
 
+$prefix = "@prefix@";
+$exec_prefix = "@exec_prefix@";
+
 if ($#ARGV < 1) {
     &fail("Usage: nesdoc <documentation directory> <options and nesC files>");
 }
@@ -26,7 +29,7 @@ $docdir = shift @ARGV;
 
 unshift @ARGV, "-docdir=$docdir";
 unshift @ARGV, "-fsyntax-only";
-unshift @ARGV, "ncc";
+unshift @ARGV, "$exec_prefix/bin/ncc";
 
 exec @ARGV;
 print STDERR "Couldn't execute ncc\n";
