--- a/configure.in
+++ b/configure.in
@@ -24,7 +24,7 @@ dnl -*- m4 -*-
 # force autoconf 2.5 on Debian systems
 AC_PREREQ(2.50)
 
-AC_INIT(nesc, 1.2dev)
+AC_INIT(nesc, 1.2alpha1)
 AC_CONFIG_AUX_DIR(config-aux)
 AC_CANONICAL_HOST
 
@@ -39,7 +39,7 @@ case $host in
 esac
 AC_SUBST(CYGWINHACKS)
 
-AM_INIT_AUTOMAKE(nesc, 1.2dev)
+AM_INIT_AUTOMAKE(nesc, 1.2alpha1)
 
 AC_CONFIG_SUBDIRS(src)
 
@@ -74,6 +74,7 @@ AC_OUTPUT(
 	tools/ncc
 	tools/nescc
 	tools/nesdoc
+	tools/nccdiff
 	tools/avr-as/Makefile
 	tools/avr-as/make-avr-as
 	tools/avr-as/install-avr-as
