Updated to nesc post 1.1.2 release (tag = merge2nc2momllib_v1)

--- a/configure.in
+++ b/configure.in
@@ -75,6 +75,7 @@ AC_OUTPUT(
 	tools/ncc
 	tools/nescc
 	tools/nesdoc
+	tools/nccdiff
 	tools/avr-as/Makefile
 	tools/avr-as/make-avr-as
 	tools/avr-as/install-avr-as
