--- a/src/configure.in
+++ b/src/configure.in
@@ -24,11 +24,11 @@ dnl -*- m4 -*-
 # force autoconf 2.5 on Debian systems
 AC_PREREQ(2.50)
 
-AC_INIT(nesc, 1.1.1beta4)
+AC_INIT(nesc, 1.1.3alpha1)
 AC_CONFIG_AUX_DIR(../config-aux)
 AC_CONFIG_SRCDIR(c-parse.y)
 AM_CONFIG_HEADER(autoconf.h)
-AM_INIT_AUTOMAKE(nesc, 1.1.1beta4)
+AM_INIT_AUTOMAKE(nesc, 1.1.3alpha1)
 
 : ${CFLAGS=-g}
 
@@ -36,7 +36,6 @@ AC_CANONICAL_HOST
 AC_MSG_CHECKING(for darwin)
 case $host in
   *-*-darwin*)
-    CPPFLAGS=-traditional-cpp
     CFLAGS="$CFLAGS -Wno-long-double"
     AC_MSG_RESULT(yes)
     ;;
