--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -25,9 +25,10 @@ emacsdir=$(editordir)/emacs
 vimdir=$(editordir)/vim
 kdedir=$(editordir)/kde
 
-bin_SCRIPTS = mig ncg ncc nescc nesdoc nc2momllib
+bin_SCRIPTS = mig ncg ncc nescc nesdoc nccdiff nc2momllib
 
-ncclib_DATA = genjava.pm gencstjava.pm migdecode.pm
+ncclib_DATA = genjava.pm gencstjava.pm gencstc.pm migdecode.pm first-avr5.x second-avr5.x
+ncclib_SCRIPTS = smalldiff
 emacs_DATA =					\
 	editor-modes/emacs/nesc.el 		\
 	editor-modes/emacs/new-nesc.el		\
@@ -44,6 +45,7 @@ kde_DATA = 					\
 
 EXTRA_DIST =					\
 	$(ncclib_DATA)				\
+	$(ncclib_SCRIPTS)			\
 	$(emacs_DATA)				\
 	$(vim_DATA)				\
 	$(kde_DATA)
