--- a/tools/avr-as/make-avr-as.in
+++ b/tools/avr-as/make-avr-as.in
@@ -23,7 +23,14 @@ $exe = $ARGV[0];
 open GCCV, "avr-gcc 2>&1 -v |";
 
 while (<GCCV>) {
-  $version = $1 if (/^gcc version ([0-9.]+)/);
+  $version = $1 if (/^gcc version ([^ \n]+)/);
+  $noavrgcc = 1 if /command not found/;
+}
+if ($noavrgcc) {
+    print "avr-gcc not found, not building special avr-as\n";
+    print "(if you are using avr-based motes, you will need to\n";
+    print "recompile nesC after installing avr-gcc)\n";
+    exit 0;
 }
 die "Could not determine avr-gcc version" if !defined($version);
 $_ = $version;
