cleanup of automatically built OOish data structure stuff infrastructure for information dump stuff (start only, request parsing) early stages of Java 1.5 '@'-style attribute support   declared w/ struct @foo { ... }   used with @foo(args) where gcc expects __attribute__

--- a/src/.cvsignore
+++ b/src/.cvsignore
@@ -1,16 +1,27 @@
-AST_defs.c
-AST_print.c
-AST_parent.c
 AST_defs.h
+AST_list_node.c
+AST_list_node.h
+AST_parent.c
+AST_print.c
+AST_types.c
 AST_types.h
 AST_walk_children.c
+ND_defs.h
+ND_list_nd_arg.c
+ND_list_nd_arg.h
+ND_types.c
+ND_types.h
+c-gperf.h
+c-parse.tab.c
+c-parse.tab.h
+lex.nd.c
+nesc-dspec.tab.c
+nesc-dspec.tab.h
 Makefile
 Makefile.in
 aclocal.m4
-c-parse.tab.c
-c-parse.tab.h
+nesc-dspec.output
 c-parse.output
-c-gperf.h
 config.cache
 autoconf.h
 autoconf.h.in
