a start to xml info dump specs for xml output are in doc/dump

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -143,6 +143,8 @@ libparser_a_SOURCES =				\
 	nesc-semantics.h			\
 	nesc-uses.c				\
 	nesc-uses.h				\
+	nesc-xml.c				\
+	nesc-xml.h				\
 	parser.h				\
 	qualifiers.h				\
 	sd_list.c				\
